<resources>
    <string name="app_name">KarPort</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">Karport</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_find_vehicle">Find My Vehicle</string>
    <string name="action_search_my_car">Find Vehicle</string>
    <string name="action_save_location">Save Location</string>
    <string name="vehicle_location_saved_message">Vehicle location saved!</string>
    <string name="title_activity_save_location">Save location</string>
    <string name="latitude_value">20.732911</string>
    <string name="longitude_value">-103.454425</string>
    <string name="found_car_button_text">Found It!</string>
    <string name="save_location_button_text">Save Location</string>
    <string name="location_saved_message">Location Saved!</string>
    <string name="default_vehicle_name">Vehicle</string>
    <string name="title_activity_pre_login">Pre Login</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="login_email_input_hint">Email</string>
    <string name="login_password_input_hint">Password</string>
    <string name="sign_up_email_input_hint">Email</string>
    <string name="sign_up_password_input_hint">Password</string>
    <string name="sign_up_name_input_hint">Name</string>
    <string name="sign_up_select_sex">Legal Gender: </string>
    <string name="sign_up_select_special_condition">Condition: </string>
    <string name="default_select_birthdate_button_text">Birthdate: </string>
    <string name="sign_up_select_date_button_text">Select</string>
    <string name="profile_button_text">My Profile</string>
    <string name="park_button_text">Find Spot</string>
    <string name="find_car_button_text">Find Vehicle</string>
    <string name="title_activity_add_new_car">Add new vehicle</string>
    <string name="add_car_plates_hint">Plates</string>
    <string name="add_car_brand_hint">Brand</string>
    <string name="add_car_model_hint">Model</string>
    <string name="add_car_year_hint">Year</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_profile">User Profile</string>

    <string-array name="sex_options">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string-array name="special_condition_options">
        <item>none</item>
        <item>handicapped</item>
        <item>pregnant</item>
    </string-array>

    <string name="title_activity_find_spot">Find Spot</string>
    <string name="subtitle_activity_profile">User Email</string>
    <string name="sample_lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="user_info_profile_title">User Info</string>


    <string name="yoab_ip_address">http://10.43.28.194:9000/api/zones</string>
    <string name="URL_for_register_people">http://10.43.28.194:9000/api/users</string>
    <string name="URL_for_login">http://10.43.28.194:9000/api/users/verify</string>
    <string name="URL_for_register_cars">http://10.43.28.194:9000/api/cars</string>
    <string name="URL_for_register_people_add_plate">http://10.43.28.194:9000/api/users</string>
</resources>
