<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.iotkali.karport.AddNewCarActivity">
    <!--<ImageView
        android:id="@+id/float_flat_plus_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@mipmap/plus_icon"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/add_new_car_card"
        android:layout_marginTop="15dp"
        android:padding="2dp"
        android:elevation="10dp"/>-->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/add_new_car_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <EditText
                android:id="@+id/add_car_plates_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_car_plates_hint"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/common_text_color"
                android:inputType="textCapCharacters"/>
            <EditText
                android:id="@+id/add_car_brand_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_car_brand_hint"
                android:layout_marginBottom="20dp"
                android:textColor="@color/common_text_color"
                android:inputType="text"/>
            <EditText
                android:id="@+id/add_car_model_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_car_model_hint"
                android:layout_marginBottom="20dp"
                android:textColor="@color/common_text_color"
                android:inputType="text"/>
            <EditText
                android:id="@+id/add_car_year_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_car_year_hint"
                android:layout_marginBottom="20dp"
                android:textColor="@color/common_text_color"
                android:inputType="text"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_new_car_fab"
        android:layout_below="@+id/add_new_car_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_add_white_36dp"/>
</RelativeLayout>
