<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context="com.iotkali.karport.SignUpActivity"
    android:isScrollContainer="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/sign_up_background_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType = "centerCrop"
        android:src="@drawable/sign_up_background"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:paddingBottom="50dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_white_color"
                android:orientation="vertical"
                android:paddingTop="0dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                    <ImageView
                        android:id="@+id/sign_up_logo_colors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/karport_logo_colors_horizontal"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingTop="0dp"
                            android:paddingBottom="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp">
                            <EditText
                                android:id="@+id/sign_up_name_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/sign_up_name_input_hint"
                                android:layout_marginBottom="5dp"
                                android:textColor="@color/common_text_color"/>
                            <EditText
                                android:id="@+id/sign_up_email_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/login_email_input_hint"
                                android:inputType="textEmailAddress"
                                android:layout_marginBottom="5dp"
                                android:textColor="@color/common_text_color"/>
                            <EditText
                                android:id="@+id/sign_up_password_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/login_password_input_hint"
                                android:inputType="textPassword"
                                android:layout_marginBottom="10dp"
                                android:textColor="@color/common_text_color"/>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/default_select_birthdate_button_text"
                                    android:textSize="18sp"
                                    android:layout_marginRight="10dp"
                                    android:textColor="@color/common_text_color"/>
                                <Button
                                    android:id="@+id/birthdate_select_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sign_up_select_date_button_text"
                                    style="?android:attr/borderlessButtonStyle"
                                    android:paddingLeft="0dp"
                                    android:textSize="14sp"
                                    android:textColor="@color/common_text_color"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginBottom="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sign_up_select_sex"
                                    android:textSize="18sp"
                                    android:layout_marginRight="10dp"
                                    android:textColor="@color/common_text_color"/>
                                <Spinner
                                    android:id="@+id/sex_spinner"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="10dp"
                                    android:textColor="@color/common_text_color"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_marginBottom="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sign_up_select_special_condition"
                                    android:textSize="18sp"
                                    android:layout_marginRight="10dp"
                                    android:textColor="@color/common_text_color"/>
                                <Spinner
                                    android:id="@+id/special_condition_spinner"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="10dp"
                                    android:textColor="@color/common_text_color"/>
                            </LinearLayout>
                        </LinearLayout>
                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/sign_in_button_login_color"
                    android:text="@string/sign_up_button_text"
                    android:textColor="@color/main_white_color"
                    android:layout_alignParentBottom="true"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
