<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context="com.iotkali.karport.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/login_background_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType = "centerCrop"
        android:src="@drawable/login_background"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_white_color"
            android:weightSum="1"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">
            <ImageView
                android:id="@+id/login_logo_colors"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:src="@mipmap/karport_logo_colors"
                android:layout_centerHorizontal="true"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:weightSum="1"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <EditText
                    android:id="@+id/login_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_input_hint"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/common_text_color" />
                <EditText
                    android:id="@+id/login_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_input_hint"
                    android:inputType="textPassword"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/common_text_color"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/sign_in_button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/sign_in_button_login_color"
                        android:text="@string/sign_in_button_text"
                        android:layout_alignParentBottom="true"
                        android:textColor="@color/main_white_color"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>