<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.iotkali.karport.MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/main_background_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType = "centerCrop"
        android:src="@drawable/main_background"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="30dp"
        android:paddingBottom="60dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_white"
            android:weightSum="1"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:weightSum="1"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    app:cardElevation="7dp"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="18sp">
                        <ImageButton
                            android:id="@+id/profile_button_main"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@mipmap/ic_person_white_48dp"
                            android:background="@drawable/round_profile_button"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:padding="10dp"
                            android:scaleType="centerCrop"
                            android:gravity="center"
                            android:layout_margin="10dp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_button_text"
                            android:textAlignment="center"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    app:cardElevation="7dp"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="18sp">
                        <ImageButton
                            android:id="@+id/park_button_main"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@mipmap/ic_time_to_leave_white_48dp"
                            android:background="@drawable/round_park_button"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:padding="10dp"
                            android:scaleType="centerCrop"
                            android:gravity="center"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/park_button_text"
                            android:textAlignment="center"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:weightSum="1"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    app:cardElevation="7dp"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="18sp">
                        <ImageButton
                            android:id="@+id/find_car_button_main"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@mipmap/ic_search_white_48dp"
                            android:background="@drawable/round_find_car_button"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:padding="10dp"
                            android:scaleType="centerCrop"
                            android:gravity="center"
                            android:layout_margin="10dp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/find_car_button_text"
                            android:textAlignment="center"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    app:cardElevation="7dp"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="18sp">
                        <ImageButton
                            android:id="@+id/save_location_button_main"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@mipmap/ic_add_location_white_48dp"
                            android:background="@drawable/round_save_location_button"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:padding="10dp"
                            android:scaleType="centerCrop"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/save_location_button_text"
                            android:textAlignment="center"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
